fix(lib): dislodged hoverable dropdown on mobile screen
- Fixes the issue that the contents of a hoverable `BDropdown` was
  displayed at a wrong position on a mobile (narrow) screen. Cancels the
  effect of `.is-hoverable` if the screen is narrow.

  One drawback is that the dropdown won't be displayed on mobile screen
  unless triggers other than "hover" are enabled. But this should not
  matter on actual mobile (touch) devices because "hover" won't work on
  such devices anyway.

  Another drawback is that if "click" trigger is combined with "hover",
  the dropdown contents won't be closed by moving the pointer out of
  the trigger once users click on the trigger. This might confuse the
  users.

issue buefy/buefy#3961

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -130,6 +130,19 @@ $dropdown-disabled-opacity: 0.5 !default;
                     }
                 }
             }
+            /* cancels hoverable */
+            &.is-hoverable {
+                &:hover {
+                    .dropdown-menu {
+                        display: none;
+                    }
+                }
+                &.is-active {
+                    .dropdown-menu {
+                        display: block;
+                    }
+                }
+            }
         }
     }
 }
